--- a/nr-add-ps-doc/ig/qa-ipreview.html
+++ b/nr-add-ps-doc/ig/qa-ipreview.html
@@ -53,7 +53,7 @@ Documentation des guides d'implémentation de l'ANS - version de développement 
       </tr>
       <tr>
         <td>
-          <a href="artifacts.html">web</a>
+          <a href="about.html">web</a>
         </td>
         <td>
           <a href="https://esante.gouv.fr/">esante.gouv.fr</a>
@@ -71,7 +71,7 @@ Documentation des guides d'implémentation de l'ANS - version de développement 
       </tr>
       <tr>
         <td>
-          <a href="artifacts.html">web</a>
+          <a href="about.html">web</a>
         </td>
         <td>
           <a href="https://esante.gouv.fr">esante.gouv.fr</a>
@@ -85,7 +85,68 @@ Documentation des guides d'implémentation de l'ANS - version de développement 
       </tr>
       <tr>
         <td>
-          <a href="artifacts.html">web</a>
+          <a href="about.html">web</a>
+        </td>
+        <td>
+          <a href="https://github.com/HL7/US-Core">github.com</a>
+        </td>
+        <td>
+Us-core :           <a href="https://hl7.org/fhir/us/core/">Publication</a>
+,           <a href="https://github.com/HL7/US-Core">GitHub</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="about.html">web</a>
+        </td>
+        <td>
+          <a href="https://github.com/HL7/fhir-mCODE-ig">github.com</a>
+        </td>
+        <td>
+mcode (qui se base sur uscore) :           <a href="http://hl7.org/fhir/us/mcode/">Publication</a>
+,           <a href="https://github.com/HL7/fhir-mCODE-ig">GitHub</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="about.html">web</a>
+        </td>
+        <td>
+          <a href="https://github.com/HL7/sdc">github.com</a>
+        </td>
+        <td>
+SDC, IG qui définit des profils de la ressource FHIR Questionnaire. Ces profils rajoutent des fonctionnalités de : préremplissage des champs, indiquer un design de formulaire, calcul automatique…) :           <a href="http://hl7.org/fhir/uv/sdc/index.html">Publication</a>
+,           <a href="https://github.com/HL7/sdc">GitHub</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="about.html">web</a>
+        </td>
+        <td>
+          <a href="https://fshschool.org/">fshschool.org</a>
+        </td>
+        <td>
+L’éditeur de profils FSH (Grammaire de définition de profils) :           <a href="https://fshschool.org/">getting started</a>
+,           <a href="https://build.fhir.org/ig/HL7/fhir-shorthand/">documentation</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="about.html">web</a>
+        </td>
+        <td>
+          <a href="https://github.com/HL7/cql">github.com</a>
+        </td>
+        <td>
+          <a href="https://cql.hl7.org/">Clinical Quality Language (CQL)</a>
+ (langage d’expression FHIR, permettant par ex de décrire le calcul de l’IMC),           <a href="https://build.fhir.org/ig/HL7/cqf-measures/using-cql.html">Documentation</a>
+,           <a href="https://github.com/HL7/cql">GitHub</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="about.html">web</a>
         </td>
         <td>
           <a href="https://esante.gouv.fr">esante.gouv.fr</a>
@@ -94,7 +155,7 @@ Documentation des guides d'implémentation de l'ANS - version de développement 
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Mon, Dec 22, 2025 10:05+0000">2025-12-22</span>
+. Generated           <span title="Mon, Dec 22, 2025 10:18+0000">2025-12-22</span>
 
                     <br/>
 
@@ -115,7 +176,7 @@ Documentation des guides d'implémentation de l'ANS - version de développement 
       </tr>
       <tr>
         <td>
-          <a href="artifacts.html">web</a>
+          <a href="about.html">web</a>
         </td>
         <td>
           <a href="https://github.com/ansforge/IG-documentation/issues">github.com</a>
@@ -124,7 +185,7 @@ Documentation des guides d'implémentation de l'ANS - version de développement 
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Mon, Dec 22, 2025 10:05+0000">2025-12-22</span>
+. Generated           <span title="Mon, Dec 22, 2025 10:18+0000">2025-12-22</span>
 
                     <br/>
 
@@ -145,7 +206,7 @@ Documentation des guides d'implémentation de l'ANS - version de développement 
       </tr>
       <tr>
         <td>
-          <a href="artifacts.html">web</a>
+          <a href="about.html">web</a>
         </td>
         <td>
           <a href="https://solidarites-sante.gouv.fr">solidarites-sante.gouv.fr</a>
@@ -165,7 +226,7 @@ Documentation des guides d'implémentation de l'ANS - version de développement 
       </tr>
       <tr>
         <td>
-          <a href="artifacts.html">web</a>
+          <a href="about.html">web</a>
         </td>
         <td>
           <a href="https://esante.gouv.fr/">esante.gouv.fr</a>
@@ -1200,67 +1261,6 @@ De la même manière qu’FSH, GoFSH est également disponible en ligne sur     
 GoFSH permet de faire la transformation inverse StructureDefinition –&gt; FSH. Il permet de faciliter la prise en main et la conversion d’anciens projets json dans la syntaxe FSH.
 De la même manière qu’FSH, GoFSH est également disponible en ligne sur           <a href="https://fshschool.org/">le site FSHSchool</a>
  ou en           <a href="https://www.npmjs.com/package/gofsh">invite de commande</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <a href="index.html">web</a>
-        </td>
-        <td>
-          <a href="https://github.com/HL7/US-Core">github.com</a>
-        </td>
-        <td>
-Us-core :           <a href="https://hl7.org/fhir/us/core/">Publication</a>
-,           <a href="https://github.com/HL7/US-Core">GitHub</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <a href="index.html">web</a>
-        </td>
-        <td>
-          <a href="https://github.com/HL7/fhir-mCODE-ig">github.com</a>
-        </td>
-        <td>
-mcode (qui se base sur uscore) :           <a href="http://hl7.org/fhir/us/mcode/">Publication</a>
-,           <a href="https://github.com/HL7/fhir-mCODE-ig">GitHub</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <a href="index.html">web</a>
-        </td>
-        <td>
-          <a href="https://github.com/HL7/sdc">github.com</a>
-        </td>
-        <td>
-SDC, IG qui définit des profils de la ressource FHIR Questionnaire. Ces profils rajoutent des fonctionnalités de : préremplissage des champs, indiquer un design de formulaire, calcul automatique…) :           <a href="http://hl7.org/fhir/uv/sdc/index.html">Publication</a>
-,           <a href="https://github.com/HL7/sdc">GitHub</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <a href="index.html">web</a>
-        </td>
-        <td>
-          <a href="https://fshschool.org/">fshschool.org</a>
-        </td>
-        <td>
-L’éditeur de profils FSH (Grammaire de définition de profils) :           <a href="https://fshschool.org/">getting started</a>
-,           <a href="https://build.fhir.org/ig/HL7/fhir-shorthand/">documentation</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <a href="index.html">web</a>
-        </td>
-        <td>
-          <a href="https://github.com/HL7/cql">github.com</a>
-        </td>
-        <td>
-          <a href="https://cql.hl7.org/">Clinical Quality Language (CQL)</a>
- (langage d’expression FHIR, permettant par ex de décrire le calcul de l’IMC),           <a href="https://build.fhir.org/ig/HL7/cqf-measures/using-cql.html">Documentation</a>
-,           <a href="https://github.com/HL7/cql">GitHub</a>
         </td>
       </tr>
       <tr>
@@ -2397,6 +2397,12 @@ erreurs-lignes.png          <br/>
         <td>
 homepage-matchbox.png          <br/>
           <img src="homepage-matchbox.png" alt="homepage-matchbox.png" width="600px" height="auto"/>
+        </td>
+      </tr>
+      <tr>
+        <td>
+intro-iop.png          <br/>
+          <img src="intro-iop.png" alt="intro-iop.png" width="600px" height="auto"/>
         </td>
       </tr>
       <tr>
