--- a/nr-add-ps-doc/ig/doc_ps.html
+++ b/nr-add-ps-doc/ig/doc_ps.html
@@ -157,6 +157,9 @@
       <li>
         <a target="_blank" href="https://esante.gouv.fr">Site de l&apos;ANS </a>
       </li>
+      <li>
+        <a href="about.html">A propos</a>
+      </li>
     </ul>
   </li>
 </ul>
@@ -220,7 +223,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 <div class="markdown-toc">
 <ul id="markdown-toc">
   <li><a href="#linteropérabilité-en-santé" id="markdown-toc-linteropérabilité-en-santé">L’interopérabilité en santé</a></li>
-  <li><a href="#le-rôle-des-professionnels-de-santé-et-établissements-de-santé-dans-linteropérabilité" id="markdown-toc-le-rôle-des-professionnels-de-santé-et-établissements-de-santé-dans-linteropérabilité">Le rôle des professionnels de santé et établissements de santé dans l’interopérabilité</a></li>
+  <li><a href="#le-rôle-des-professionnels-de-santé-ps-et-établissements-de-santé-es-dans-linteropérabilité" id="markdown-toc-le-rôle-des-professionnels-de-santé-ps-et-établissements-de-santé-es-dans-linteropérabilité">Le rôle des professionnels de santé (PS) et établissements de santé (ES) dans l’interopérabilité</a></li>
   <li><a href="#le-standard-fhir" id="markdown-toc-le-standard-fhir">Le standard FHIR</a></li>
   <li><a href="#les-guides-dimplémentation" id="markdown-toc-les-guides-dimplémentation">Les guides d’implémentation</a></li>
   <li><a href="#les-modèles-logiques" id="markdown-toc-les-modèles-logiques">Les modèles logiques</a></li>
@@ -230,7 +233,11 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 <h3 id="linteropérabilité-en-santé">L’interopérabilité en santé</h3>
 
 <p>L’interopérabilité désigne la capacité des logiciels de santé à <strong><code class="language-plaintext highlighter-rouge">partager et intégrer</code></strong> des données de santé.
-Par exemple, les dates peuvent s’écrire de pleins de formats : 22 décembre 2027, 22/12/2027, 12/22/2027 aux Etats-Unis, etc …. L’objectif de l’interopérabilité est de désigner un format commun pour les dates, les résultats de biologie, les pathologies, les symptômes, etc …</p>
+Par exemple, les dates peuvent s’écrire dans différents formats : 22 décembre 2027, 22/12/2027, 12/22/2027 aux Etats-Unis, etc …. L’objectif de l’interopérabilité est de désigner un format commun pour les dates, les résultats de biologie, les pathologies, les symptômes, etc …</p>
+
+<div class="figure" style="width:100%;">
+    <img style="height: auto; width: 100%;" src="intro-iop.png" alt="mapping fhir annuaire" title="mapping fhir annuaire" />
+</div>
 
 <p>Dans votre pratique quotidienne, cela signifie que les informations patients que vous saisissez dans votre logiciel peuvent être partagées de manière sécurisée et structurée avec d’autres logiciels, et ainsi vous permettre de :</p>
 
@@ -241,7 +248,7 @@ Par exemple, les dates peuvent s’écrire de pleins de formats : 22 décembre 2
 
 <p>L’objectif de l’interopérabilité est de garantir que ces données restent exploitables et compréhensibles par tous les acteurs du parcours de soins et de la recherche clinique, indépendamment des outils utilisés.</p>
 
-<h3 id="le-rôle-des-professionnels-de-santé-et-établissements-de-santé-dans-linteropérabilité">Le rôle des professionnels de santé et établissements de santé dans l’interopérabilité</h3>
+<h3 id="le-rôle-des-professionnels-de-santé-ps-et-établissements-de-santé-es-dans-linteropérabilité">Le rôle des professionnels de santé (PS) et établissements de santé (ES) dans l’interopérabilité</h3>
 
 <p>Les données de santé sont complexes et nécessitent une expertise métier forte pour les comprendre. Par exemple, la structure de la posologie : elle peut contenir un nombre de comprimé minimal, maximal, des conditions de prises (ex : si douleur), une durée, une fréquence, … Il est dans ce cas indispensable qu’un prescripteur détermine tout ce qui est attendu d’une structuration de posologie pour que les experts interopérabilité puissent décrire de manière concise et précises les objets contenant ces informations.</p>
 
@@ -302,7 +309,7 @@ Par exemple, les dates peuvent s’écrire de pleins de formats : 22 décembre 2
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:05+0000">2025-12-22</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:18+0000">2025-12-22</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
