--- a/nr-add-ps-doc/ig/tests.html
+++ b/nr-add-ps-doc/ig/tests.html
@@ -157,6 +157,9 @@
       <li>
         <a target="_blank" href="https://esante.gouv.fr">Site de l&apos;ANS </a>
       </li>
+      <li>
+        <a href="about.html">A propos</a>
+      </li>
     </ul>
   </li>
 </ul>
@@ -392,7 +395,7 @@ L’objectif de ces cas de test est de valider la ressource ou la requête const
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:05+0000">2025-12-22</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:18+0000">2025-12-22</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
