--- a/nr-add-ps-doc/ig/valider_res.html
+++ b/nr-add-ps-doc/ig/valider_res.html
@@ -157,6 +157,9 @@
       <li>
         <a href="https://esante.gouv.fr" target="_blank">Site de l'ANS </a>
       </li>
+      <li>
+        <a href="about.html">A propos</a>
+      </li>
     </ul>
   </li>
 </ul>
@@ -246,7 +249,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
 <ul>
   <li><a href="https://validator.fhir.org">FHIR Validator</a></li>
-  <li><a name="l434">​</a><a href="[https://test.ahdis.ch/matchbox](https://test.ahdis.ch/matchbox/#/)">Matchbox</a></li>
+  <li><a name="l440">​</a><a href="[https://test.ahdis.ch/matchbox](https://test.ahdis.ch/matchbox/#/)">Matchbox</a></li>
 </ul>
 
 <h3 id="validation-avec-hapi-fhir-et-lopération-validate">Validation avec HAPI FHIR et l’opération $Validate</h3>
@@ -345,7 +348,7 @@ Pour cela, il faudra utiliser l’opération <a href="https://www.hl7.org/fhir/r
 
       <div class="inner-wrapper">
         <p>
-          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:05+0000">2025-12-22</span>
+          IG &copy; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:18+0000">2025-12-22</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
