update bp modeler 8eaceb67872ba18c7e781858bdb84970503b804f

--- a/nr-add-ps-doc/ig/github.html
+++ b/nr-add-ps-doc/ig/github.html
@@ -236,6 +236,17 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
 <p>Pour créer un compte GitHub et être enrôlé dans l’organisation ansforge, il suffit de suivre <a href="https://ansforge.github.io/Documentation/">cette documentation</a></p>
 
+<h4 id="règles-dutilisation-de-github">Règles d’utilisation de GitHub</h4>
+
+<ul>
+  <li>Toutes modifications d’une spécification sur GitHub doit se faire au niveau d’une branche.</li>
+  <li>Le nom de la branche doit être préfixé par les initiales de l’auteur (ex : “sb-“ pour Sébastien Brunelle) suivi de la description des travaux (ex : “sb-ajout-bonnespratiques-github)</li>
+  <li>Lorsque les travaux de modifications sont effectués, il est nécessaire de créer une Pull Request (PR) qui doit être validée par au moins un autre membre de l’ANS.</li>
+  <li>Une fois la Pull Request validée, c’est à l’auteur des modifications de fusionner (=merge) la pull request avec la branche principale “main”.</li>
+</ul>
+
+<p>A noter qu’aucune modification doit être faite directement dans main.</p>
+
 <h3 id="création-dun-nouveau-projet">Création d’un nouveau projet</h3>
 
 <h4 id="les-règles-de-nommage">les règles de nommage</h4>
@@ -362,6 +373,7 @@ Le xxx est à remplacer avec l’indication dans ssh :</p>
 
 
 
+
 </div>
         </div>  <!-- /inner-wrapper -->
       </div>  <!-- /row -->
@@ -400,7 +412,7 @@ Le xxx est à remplacer avec l’indication dans ssh :</p>
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:18+0000">2025-12-22</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:24+0000">2025-12-22</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
