--- a/nr-add-ps-doc/ig/index.html
+++ b/nr-add-ps-doc/ig/index.html
@@ -278,11 +278,9 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
 <h3 id="les-guides-dimplémentation">Les guides d’implémentation</h3>
 
-<p>Selon la documentation FHIR, un Implementation Guide contient un ensemble cohérent de ressources de conformité pour répondre à une problématique particulière.</p>
+<p>Un guide d’implémentation se présente sous forme d’un site web contenant un ensemble cohérent de ressources de conformité pour répondre à une problématique particulière. Le guide d’implémentation est versionné (l’ensemble des versions reste accessible) et packagé.</p>
 
-<p>Un implementation guide se présente sous forme d’un site web et d’un package contenant l’ensemble des ressources de conformité. Les implementation guides (site web, ressources de conformité et package) sont versionnés. L’ensemble des versions historiques seront toujours accessibles.</p>
-
-<p>La meilleure pratique consiste à créer un Implementation Guide par projet bien spécifique, cela permet :</p>
+<p>La meilleure pratique consiste à créer un guide d’implémentation par projet bien spécifique, cela permet :</p>
 
 <ul>
   <li>De versionner séparément, on peut ainsi mettre à jour chacune des specs séparément sans avoir à mettre à jour celles qui ne sont pas concernées</li>
@@ -392,7 +390,7 @@ Il prend en entrée une arborescence de dossiers / fichiers bien définis, conte
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:18+0000">2025-12-22</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:24+0000">2025-12-22</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
