update bonnes pratiques github dc63f76d28f2a2d64dc9f74e08a3c0cd23ddd38f

--- a/nr-add-ps-doc/ig/github.html
+++ b/nr-add-ps-doc/ig/github.html
@@ -230,11 +230,12 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 </ul>
 
 </div>
-<p>GitHub est l’équivalent d’un sharepoint, un répertoire (=repository) versionné avec un système de branche pour travailler de manière collaborative sur du contenu textuel (code, écriture, grammaire …).</p>
+<p>GitHub est l’équivalent d’un sharepoint, un répertoire (=repository) versionné avec un système de branche pour travailler de manière collaborative sur du contenu textuel (code, écriture, grammaire …).
+Cette page se concentre sur les bonnes pratique au sein de l’organisation GitHub <a href="https://github.com/ansforge">ansforge</a> sur les guides d’implémentation. Elle peut également servir de bonnes pratiques pour les volets externes.</p>
 
 <h3 id="premiers-pas-sur-gihub">Premiers pas sur GiHub</h3>
 
-<p>Pour créer un compte GitHub et être enrôlé dans l’organisation ansforge, il suffit de suivre <a href="https://ansforge.github.io/Documentation/">cette documentation</a></p>
+<p>Pour créer un compte GitHub et être enrôlé dans l’organisation <a href="https://github.com/ansforge">ansforge</a>, il suffit de suivre <a href="https://ansforge.github.io/Documentation/">cette documentation</a>.</p>
 
 <h4 id="règles-dutilisation-de-github">Règles d’utilisation de GitHub</h4>
 
@@ -412,7 +413,7 @@ Le xxx est à remplacer avec l’indication dans ssh :</p>
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:24+0000">2025-12-22</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:27+0000">2025-12-22</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
