--- a/nr-add-ps-doc/ig/qa-ipreview.html
+++ b/nr-add-ps-doc/ig/qa-ipreview.html
@@ -155,7 +155,7 @@ L’éditeur de profils FSH (Grammaire de définition de profils) :           <a
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Mon, Dec 22, 2025 10:24+0000">2025-12-22</span>
+. Generated           <span title="Mon, Dec 22, 2025 10:27+0000">2025-12-22</span>
 
                     <br/>
 
@@ -185,7 +185,7 @@ L’éditeur de profils FSH (Grammaire de définition de profils) :           <a
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Mon, Dec 22, 2025 10:24+0000">2025-12-22</span>
+. Generated           <span title="Mon, Dec 22, 2025 10:27+0000">2025-12-22</span>
 
                     <br/>
 
@@ -1151,10 +1151,38 @@ Pour rappel, les bonnes pratiques imposent de respecter les modélisations faite
           <a href="github.html">web</a>
         </td>
         <td>
+          <a href="https://github.com/ansforge">github.com</a>
+        </td>
+        <td>
+GitHub est l’équivalent d’un sharepoint, un répertoire (=repository) versionné avec un système de branche pour travailler de manière collaborative sur du contenu textuel (code, écriture, grammaire …).
+Cette page se concentre sur les bonnes pratique au sein de l’organisation GitHub           <a href="https://github.com/ansforge">ansforge</a>
+ sur les guides d’implémentation. Elle peut également servir de bonnes pratiques pour les volets externes.
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="github.html">web</a>
+        </td>
+        <td>
+          <a href="https://github.com/ansforge">github.com</a>
+        </td>
+        <td>
+Pour créer un compte GitHub et être enrôlé dans l’organisation           <a href="https://github.com/ansforge">ansforge</a>
+, il suffit de suivre           <a href="https://ansforge.github.io/Documentation/">cette documentation</a>
+.
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="github.html">web</a>
+        </td>
+        <td>
           <a href="https://ansforge.github.io/Documentation/">ansforge.github.io</a>
         </td>
         <td>
-Pour créer un compte GitHub et être enrôlé dans l’organisation ansforge, il suffit de suivre           <a href="https://ansforge.github.io/Documentation/">cette documentation</a>
+Pour créer un compte GitHub et être enrôlé dans l’organisation           <a href="https://github.com/ansforge">ansforge</a>
+, il suffit de suivre           <a href="https://ansforge.github.io/Documentation/">cette documentation</a>
+.
         </td>
       </tr>
       <tr>
