update image 0294ae43f64bb1b82354512c8e83067542b23dcd

--- a/nr-add-ps-doc/ig/doc_ps.html
+++ b/nr-add-ps-doc/ig/doc_ps.html
@@ -235,8 +235,8 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 <p>L’interopérabilité désigne la capacité des logiciels de santé à <strong><code class="language-plaintext highlighter-rouge">partager et intégrer</code></strong> des données de santé.
 Par exemple, les dates peuvent s’écrire dans différents formats : 22 décembre 2027, 22/12/2027, 12/22/2027 aux Etats-Unis, etc …. L’objectif de l’interopérabilité est de désigner un format commun pour les dates, les résultats de biologie, les pathologies, les symptômes, etc …</p>
 
-<div class="figure" style="width:100%;">
-    <img style="height: auto; width: 100%;" src="intro-iop.png" alt="mapping fhir annuaire" title="mapping fhir annuaire" />
+<div class="figure" style="width:100%; text-align: center">
+    <img style="height: auto; width: 75%;" src="intro-iop.png" alt="mapping fhir annuaire" title="mapping fhir annuaire" />
 </div>
 
 <p>Dans votre pratique quotidienne, cela signifie que les informations patients que vous saisissez dans votre logiciel peuvent être partagées de manière sécurisée et structurée avec d’autres logiciels, et ainsi vous permettre de :</p>
@@ -309,7 +309,7 @@ Par exemple, les dates peuvent s’écrire dans différents formats : 22 décemb
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:27+0000">2025-12-22</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:34+0000">2025-12-22</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
