add link webinaire 61c8ae56d854b37d228ab83c8e1ad1aa2071dd2e

--- a/nr-add-ps-doc/ig/about.html
+++ b/nr-add-ps-doc/ig/about.html
@@ -240,8 +240,8 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 <ul>
   <li><a href="https://confluence.hl7.org/display/FHIR/IG+Publisher+Documentation">IG publisher - documentation officielle HL7</a></li>
   <li><a href="https://cql.hl7.org/">Clinical Quality Language (CQL)</a> (langage d’expression FHIR, permettant par ex de décrire le calcul de l’IMC), <a href="https://build.fhir.org/ig/HL7/cqf-measures/using-cql.html">Documentation</a>, <a href="https://github.com/HL7/cql">GitHub</a></li>
+  <li><a href="https://www.youtube.com/watch?v=JGmJWUkX1nU">Webinaire d’introduction à l’interopérabilité de l’ANS</a></li>
 </ul>
-
 
 
 
@@ -283,7 +283,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:35+0000">2025-12-22</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:54+0000">2025-12-22</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
