--- a/nr-add-ps-doc/ig/qa-ipreview.html
+++ b/nr-add-ps-doc/ig/qa-ipreview.html
@@ -149,13 +149,24 @@ L’éditeur de profils FSH (Grammaire de définition de profils) :           <a
           <a href="about.html">web</a>
         </td>
         <td>
+          <a href="https://www.youtube.com/watch?v=JGmJWUkX1nU">www.youtube.com</a>
+        </td>
+        <td>
+          <a href="https://www.youtube.com/watch?v=JGmJWUkX1nU">Webinaire d’introduction à l’interopérabilité de l’ANS</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="about.html">web</a>
+        </td>
+        <td>
           <a href="https://esante.gouv.fr">esante.gouv.fr</a>
         </td>
         <td>
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Mon, Dec 22, 2025 10:35+0000">2025-12-22</span>
+. Generated           <span title="Mon, Dec 22, 2025 10:54+0000">2025-12-22</span>
 
                     <br/>
 
@@ -185,7 +196,7 @@ L’éditeur de profils FSH (Grammaire de définition de profils) :           <a
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Mon, Dec 22, 2025 10:35+0000">2025-12-22</span>
+. Generated           <span title="Mon, Dec 22, 2025 10:54+0000">2025-12-22</span>
 
                     <br/>
 
@@ -1144,6 +1155,17 @@ Pour rappel, les bonnes pratiques imposent de respecter les modélisations faite
         <td>
 Pour rappel, les bonnes pratiques imposent de respecter les modélisations faites au niveau national :           <a href="https://hl7.fr/ig/fhir/core">FrCore</a>
  et           <a href="https://interop.esante.gouv.fr/ig/fhir/">guides d’implémentation de l’ANS</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="doc_ps.html">web</a>
+        </td>
+        <td>
+          <a href="https://www.youtube.com/watch?v=JGmJWUkX1nU">www.youtube.com</a>
+        </td>
+        <td>
+          <a href="https://www.youtube.com/watch?v=JGmJWUkX1nU">Capture d'écran de la formation introduction webinaire interopérabilité</a>
         </td>
       </tr>
       <tr>
