--- a/nr-add-ps-doc/ig/doc_ps.html
+++ b/nr-add-ps-doc/ig/doc_ps.html
@@ -223,6 +223,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 <div class="markdown-toc">
 <ul id="markdown-toc">
   <li><a href="#linteropérabilité-en-santé" id="markdown-toc-linteropérabilité-en-santé">L’interopérabilité en santé</a></li>
+  <li><a href="#todo" id="markdown-toc-todo">TODO</a></li>
   <li><a href="#le-rôle-des-professionnels-de-santé-ps-et-établissements-de-santé-es-dans-linteropérabilité" id="markdown-toc-le-rôle-des-professionnels-de-santé-ps-et-établissements-de-santé-es-dans-linteropérabilité">Le rôle des professionnels de santé (PS) et établissements de santé (ES) dans l’interopérabilité</a></li>
   <li><a href="#le-standard-fhir" id="markdown-toc-le-standard-fhir">Le standard FHIR</a></li>
   <li><a href="#les-guides-dimplémentation" id="markdown-toc-les-guides-dimplémentation">Les guides d’implémentation</a></li>
@@ -234,13 +235,13 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
 <p>L’interopérabilité désigne la capacité des logiciels de santé à <strong><code class="language-plaintext highlighter-rouge">partager et intégrer</code></strong> des données de santé.</p>
 
-<p>Par exemple, les dates peuvent s’écrire dans différents formats : 22 décembre 2027, 22/12/2027, 22-12-2027, 12/22/2027 aux Etats-Unis, etc …. L’objectif de l’interopérabilité est de désigner un format commun pour les dates, les résultats de biologie, les pathologies, les symptômes, les données administratives, etc …</p>
+<p>Par exemple, les dates peuvent s’écrire dans différents formats : 22 décembre 2027, 22/12/2027, 22-12-2027, 12/22/2027 aux Etats-Unis, etc … 
+L’objectif de l’interopérabilité est de désigner un format commun pour les dates, les résultats de biologie, les pathologies, les symptômes, les données administratives, etc …</p>
 
 <div class="figure" style="width:100%; text-align: center">
     <img style="height: auto; width: 75%;" src="intro-iop.png" alt="Capture d'écran de la formation introduction webinaire interopérabilité" title="Capture d'écran de la formation introduction webinaire interopérabilité" />
+    <p>Capture d'écran de la <a href="https://www.youtube.com/watch?v=JGmJWUkX1nU">formation introduction webinaire interopérabilité</a></p>
 </div>
-
-<p style="text-align: center;"><a href="https://www.youtube.com/watch?v=JGmJWUkX1nU">Capture d'écran de la formation introduction webinaire interopérabilité</a></p>
 
 <p>Dans votre pratique quotidienne, cela signifie que les informations patient que vous saisissez dans votre logiciel peuvent être partagées de manière sécurisée et structurée avec d’autres logiciels, et ainsi vous permettre de :</p>
 
@@ -250,6 +251,13 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 </ul>
 
 <p>L’objectif de l’interopérabilité est de garantir que ces données restent exploitables et compréhensibles par tous les acteurs du parcours de soins et de la recherche clinique, indépendamment des outils utilisés.</p>
+
+<h3 id="todo">TODO</h3>
+
+<ul>
+  <li>Une mauvaise compréhension des données par les logiciels peut provoquer des erreurs dans la prise en charge des patients</li>
+  <li></li>
+</ul>
 
 <h3 id="le-rôle-des-professionnels-de-santé-ps-et-établissements-de-santé-es-dans-linteropérabilité">Le rôle des professionnels de santé (PS) et établissements de santé (ES) dans l’interopérabilité</h3>
 
@@ -312,7 +320,7 @@ h6:before{color:silver;counter-increment:more-detail;content:var(--heading-prefi
 
       <div class="inner-wrapper">
         <p>
-          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:54+0000">2025-12-22</span>
+          IG &#169; 2020+ <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>.  Package ans.fr.documentation#0.1.9 based on <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>. Generated <span title="Mon, Dec 22, 2025 10:58+0000">2025-12-22</span>
           <br/>
           <span style="color: var(--footer-highlight-text-color)"></span>
             Liens: <a style="color: var(--footer-hyperlink-text-color)" href="toc.html">Table des matières </a> |
