--- a/nr-add-ps-doc/ig/qa-ipreview.html
+++ b/nr-add-ps-doc/ig/qa-ipreview.html
@@ -166,7 +166,7 @@ L’éditeur de profils FSH (Grammaire de définition de profils) :           <a
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Mon, Dec 22, 2025 10:59+0000">2025-12-22</span>
+. Generated           <span title="Mon, Dec 22, 2025 11:02+0000">2025-12-22</span>
 
                     <br/>
 
@@ -196,7 +196,7 @@ L’éditeur de profils FSH (Grammaire de définition de profils) :           <a
 
           IG &copy; 2020+           <a style="color:var(--footer-hyperlink-text-color)" href="https://esante.gouv.fr">ANS</a>
 .  Package ans.fr.documentation#0.1.9 based on           <a style="color: var(--footer-hyperlink-text-color)" href="http://hl7.org/fhir/R4/">FHIR 4.0.1</a>
-. Generated           <span title="Mon, Dec 22, 2025 10:59+0000">2025-12-22</span>
+. Generated           <span title="Mon, Dec 22, 2025 11:02+0000">2025-12-22</span>
 
                     <br/>
 
@@ -1165,7 +1165,7 @@ Pour rappel, les bonnes pratiques imposent de respecter les modélisations faite
           <a href="https://www.youtube.com/watch?v=JGmJWUkX1nU">www.youtube.com</a>
         </td>
         <td>
-Capture d'écran de la           <a href="https://www.youtube.com/watch?v=JGmJWUkX1nU">formation introduction webinaire interopérabilité</a>
+Capture d'écran du webinaire d'          <a href="https://www.youtube.com/watch?v=JGmJWUkX1nU">introduction à l'interopérabilité</a>
         </td>
       </tr>
       <tr>
